--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <include layout="@layout/layout_titlebar_back" />
+    <include layout="@layout/layout_titlebar_back"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_toast" />
+                    android:text="@string/into_toast"/>
 
                 <Button
                     android:id="@+id/btn_goto_image"
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_image" />
+                    android:text="@string/into_image"/>
 
                 <Button
                     android:id="@+id/btn_goto_net"
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_net" />
+                    android:text="@string/into_net"/>
             </LinearLayout>
 
             <LinearLayout
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_print" />
+                    android:text="@string/into_print"/>
 
                 <Button
                     android:id="@+id/btn_goto_html"
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_html" />
+                    android:text="@string/into_html"/>
 
                 <Button
                     android:id="@+id/btn_goto_chart"
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_chart" />
+                    android:text="@string/into_chart"/>
             </LinearLayout>
 
             <LinearLayout
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_collapsing" />
+                    android:text="@string/into_collapsing"/>
 
                 <Button
                     android:id="@+id/btn_goto_sort"
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_sort" />
+                    android:text="@string/into_sort"/>
 
                 <Button
                     android:id="@+id/btn_goto_code"
@@ -103,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_code" />
+                    android:text="@string/into_code"/>
             </LinearLayout>
 
             <LinearLayout
@@ -117,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_hot_fix" />
+                    android:text="@string/into_hot_fix"/>
 
                 <Button
                     android:id="@+id/btn_goto_main_text"
@@ -125,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_main_test" />
+                    android:text="@string/into_main_test"/>
 
                 <Button
                     android:id="@+id/btn_goto_load"
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_list_load" />
+                    android:text="@string/into_list_load"/>
             </LinearLayout>
 
             <LinearLayout
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_slide_switch" />
+                    android:text="@string/into_slide_switch"/>
 
                 <Button
                     android:id="@+id/btn_goto_system"
@@ -155,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_system_test" />
+                    android:text="@string/into_system_test"/>
 
                 <Button
                     android:id="@+id/btn_goto_signal"
@@ -163,9 +163,22 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:text="@string/into_signal" />
+                    android:text="@string/into_signal"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_goto_x_utils"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/into_x_utils"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
