修改扫描二维码功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -186,7 +186,16 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/into_xposed" />
+
+                <Button
+                    android:id="@+id/btn_goto_scan_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="扫描二维码" />
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
