--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/layout_titlebar_back" />
+
     <Button
         android:id="@+id/btn_create_code"
         android:layout_width="match_parent"
