--- a/maf/src/main/res/layout/layout_qr_capture.xml
+++ b/maf/src/main/res/layout/layout_qr_capture.xml
@@ -16,9 +16,9 @@
 
     <CheckBox
         android:id="@+id/check_light"
-        android:layout_width="55dip"
-        android:layout_height="50.0dip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10.0dip"
+        android:layout_marginRight="10dp"
         android:button="@drawable/selector_capture_power_checkbox" />
 </RelativeLayout>
