集成身份证扫描功能

--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -10,13 +10,26 @@
         android:id="@+id/btn_create_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:text="生成二维码" />
 
     <Button
         android:id="@+id/btn_scan_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:text="扫描二维码" />
+
+    <Button
+        android:id="@+id/btn_scan_id_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:text="扫描身份证" />
 </LinearLayout>
