--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <include layout="@layout/layout_titlebar_back" />
 
@@ -246,6 +246,7 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="安装apk" />
+
                 <Button
                     android:id="@+id/btn_copy_file"
                     android:layout_width="match_parent"
@@ -253,6 +254,20 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="往System复制文件" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_group_send"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="群发" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
