--- a/maf/src/main/res/values/styles.xml
+++ b/maf/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/red_swipe</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
     <!-- 没有ActionBar的Activity样式，使用时删除原来的自动生成的style.xml里面的AppTheme和AppTheme.NoActionBar -->
     <style name="AppTheme.NoActionBar">
