--- a/app/src/main/res/layout/activity_group_send_two.xml
+++ b/app/src/main/res/layout/activity_group_send_two.xml
@@ -23,168 +23,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <include layout="@layout/layout_group_send_item_image" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/shape_gray_r5"
-                        android:padding="4dp"
-                        android:text="下午3:00"
-                        android:textColor="#ffffff" />
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/shape_white_r5"
-                    android:orientation="vertical"
-                    >
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:ellipsize="end"
-                        android:lineSpacingExtra="8dp"
-                        android:lines="2"
-                        android:text="83位收件人：\n阿（小甜）, Afer先花店婚庆转车, 艾尼斯美妆连锁于老师，ANN【男装馆】 "
-                        android:textColor="#999999" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#c2c2c2" />
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="187dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/weixin_test_image" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="15dp"
-                        android:background="#bdbdbd" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="15dp"
-                        android:layout_marginTop="15dp"
-                        android:text="再发一条"
-                        android:textColor="#505e71"
-                        android:textSize="14dp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:background="@drawable/shape_gray_r5"
-                        android:padding="4dp"
-                        android:text="下午3:17"
-                        android:textColor="#ffffff" />
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/shape_white_r5"
-                    android:orientation="vertical"
-                    >
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:ellipsize="end"
-                        android:lineSpacingExtra="8dp"
-                        android:lines="2"
-                        android:text="83位收件人：\n阿（小甜）, Afer先花店婚庆转车, 艾尼斯美妆连锁于老师，ANN【男装馆】 "
-                        android:textColor="#999999" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#c2c2c2" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:ellipsize="end"
-                        android:lines="1"
-                        android:text="赶快识别 真能领"
-                        android:textColor="#000000"
-                        android:textSize="14dp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
-                        android:layout_marginTop="15dp"
-                        android:background="#bdbdbd" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="15dp"
-                        android:layout_marginTop="15dp"
-                        android:text="再发一条"
-                        android:textColor="#505e71"
-                        android:textSize="14dp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
+            <include layout="@layout/layout_group_send_item_no_image" />
         </LinearLayout>
     </ScrollView>
 
