--- a/app/src/main/res/layout/activity_my_collapsing.xml
+++ b/app/src/main/res/layout/activity_my_collapsing.xml
@@ -25,6 +25,9 @@
                 android:src="@drawable/image_two"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
+            <android.support.v7.widget.RecyclerView
+                android:layout_width=""
+                android:layout_height=""></android.support.v7.widget.RecyclerView>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
