--- a/maf/src/main/res/values/styles.xml
+++ b/maf/src/main/res/values/styles.xml
@@ -102,8 +102,14 @@
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
     <style name="datepicker_style">
         <item name="android:layout_marginLeft">6dp</item>
         <item name="android:layout_marginRight">6dp</item>
+    </style>
+    <!-- 弹出框下方显示样式 -->
+    <style name="popwindow_from_bottom_style">
+        <item name="android:windowEnterAnimation">@anim/slide_in_from_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_to_bottom</item>
     </style>
 </resources>
